# bbva

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/api/: auth.py  router.py
app/auth/: __init__.py  security.py
app/config/: agent_prompts.py  settings.py
app/models/: schemas.py
app/services/: llm_service.py  redis_service.py  state_service.py
app/workflow/: __init__.py  checkpointer.py  graph.py  nodes.py
